Took a different approach
