# api/app.go
@@ -41,55 +41,3 @@ func (h apiHandler) SaveConfiguration(w http.ResponseWriter, r *http.Request) {
 
 	h.NoContent(w)
 }
-
-func (h apiHandler) PerformMaintenance(w http.ResponseWriter, r *http.Request) {
-	var req AppMaintenanceRequest
-	if err := readJSONFromRequest(r, &req); err != nil {
-		h.Error(w, r, http.StatusBadRequest, err)
-		return
-	}
-
-	switch req.Op {
-	case OptimizeImages:
-		h.optimizeImages(w, r)
-	default:
-		h.Error(w, r, http.StatusBadRequest, fmt.Errorf("Invalid operation: '%s'", req.Op))
-		return
-	}
-}
-
-func (h apiHandler) optimizeImages(w http.ResponseWriter, r *http.Request) {
-	recipes, err := h.db.Recipes().List()
-	if err != nil {
-		h.Error(w, r, http.StatusInternalServerError, err)
-		return
-	}
-
-	for _, recipe := range *recipes {
-		// Get all the images for the recipe
-		images, err := h.db.Images().List(*recipe.Id)
-		if err != nil {
-			h.Error(w, r, http.StatusInternalServerError, err)
-			return
-		}
-
-		for _, image := range *images {
-			// Load the current original
-			data, err := h.upl.Load(*recipe.Id, *image.Name)
-			if err != nil {
-				h.Error(w, r, http.StatusInternalServerError, err)
-				return
-			}
-
-			// Resave it, which will downscale if larger than the threshold,
-			// as well as regenerate the thumbnail
-			h.upl.Save(*recipe.Id, *image.Name, data)
-			if err != nil {
-				h.Error(w, r, http.StatusInternalServerError, err)
-				return
-			}
-		}
-	}
-
-	h.NoContent(w)
-}
